# product-fairy

./: .env.example  .gitignore  README.md  generate_additional_images.py  pyproject.toml  requirements.txt
.claude/commands/: restart.md
backend/: main.py  requirements.txt
data/: sample_test.csv
docs/: FRONTEND_IMPLEMENTATION.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ApiKeyInput.jsx  CsvUpload.jsx  ImageGallery.jsx  ModeSelector.jsx  PhotoStyleSelector.jsx  ProductEditor.jsx  ProductTable.jsx  ProgressBar.jsx  ShopifyConnect.jsx  StoreBuilder.jsx
frontend/src/hooks/: useLocalStorage.js
frontend/src/lib/: imageDb.js  shopifyCsv.js
src/: generate_images.py
